Removed overflow and corrected sizes of button

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 body {
+  min-height: 98vh;
   color: rgb(0, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: "Roboto Condensed", sans-serif;
-  padding-top: 100px;
-  padding-bottom: 500px;
-  background-color: #d4418e;
+
   background: -webkit-linear-gradient(
     top,
     rgb(103, 227, 203) 0%,
@@ -14,11 +13,9 @@ body {
     rgb(73, 126, 228) 99%,
     rgb(255, 255, 255) 100%
   );
+
   font-family: "Poppins", sans-serif;
-}
-#allbody {
-  background-color: #abe9cd;
-  background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
+  overflow-y: scroll;
 }
 
 #mainbox {
@@ -36,14 +33,13 @@ body {
   display: flex;
   justify-content: left;
   align-items: left;
-  /* border-style: groove; */
 }
 
 #middle {
   border: solid rgb(255, 255, 255);
   padding-bottom: 0px;
   width: auto;
-  height: 50px;
+  height: auto;
   display: flex;
   justify-content: left;
   align-items: left;
@@ -56,7 +52,6 @@ body {
   background-color: rgb(255, 255, 255);
   width: 300px;
   height: 30px;
-  /* padding-right: 140px; */
   padding-left: 10px;
   font-size: larger;
   border: solid rgb(194, 191, 191) 1px;
@@ -75,28 +70,11 @@ body {
   margin-left: 10px;
   border-radius: 3px;
 }
-/* #addbutton:hover {
-  background-color: greenyellow; 
- color: white;
-  transform: scale(1.3);
 
- } */
-
-/* #listed {
-  border: solid rgb(255, 255, 255) 1px;
-  background-color: rgb(196, 190, 190);
-  border-radius: 10px;
-  width: auto;
-  height: auto;
-  justify-content: left;
-  align-items: left;
-  font-size: larger;
-} */
 ul {
   list-style-type: disc;
 }
 ul {
-  /* margin-bottom: 10px; */
   padding: 10px;
 }
 
@@ -112,7 +90,6 @@ ul li {
   transition: 0.2s;
   padding-bottom: 10px;
   height: 20px;
-  /* width: 340px; */
   min-width: 340px;
   max-width: auto;
 }
@@ -125,29 +102,23 @@ ul li:nth-child() {
 /* Darker background-color on hover */
 li:hover .removebutton {
   display: block !important;
-
-  /* background: #ddd; */
 }
 
 .removebutton {
   background-color: red;
   color: white;
   border: none;
-  padding-right: 7px;
-  border-radius: 2px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-top: 2px;
+  padding-bottom: 5px;
   font-size: larger;
   font-weight: bold;
   float: right;
   display: none !important;
   width: 35px;
-  height: 35px;
-  /* margin-left: 20px; */
+  height: 38px;
 }
-/* .removebutton:hover {
-  background-color: red;
-  color: white;
-  transform: scale(1.1);
-} */
 
 #deleteall {
   color: white;
@@ -159,15 +130,10 @@ li:hover .removebutton {
   border-radius: 3px;
   font-family: "Poppins", sans-serif;
 }
-/* #deleteall:hover {
-  background-color: red;
-  color: white;
-  transform: scale(1.1);
-} */
+
 #deletebox {
   display: flex;
   align-items: left;
   justify-content: left;
-  /* padding-top: 20px; */
   padding-left: 10px;
 }
